# peterhenryd.me

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  data.json  package-lock.json  package.json
.github/workflows/: main.yml
api/: Cargo.toml
api/src/: error.rs  main.rs  state.rs
api/src/handlers/: blog_posts.rs  users.rs
app/: Cargo.toml  bonnie.toml  index.html  tailwind.config.js
app/src/: app.rs  html.rs  main.rs  router.rs  theme.rs  title.rs
app/src/components/: footer.rs  header.rs  mod.rs  theme_toggler.rs
app/src/components/nav/: link.rs  mod.rs  route_link.rs
app/src/layouts/: default.rs
app/src/pages/: blog.rs  blog_post.rs  home.rs  mod.rs  not_found.rs
app/styles/: nav.css  styles.css  tailwind.css  themes.css
app/templates/pages/: blog.html  home.html
backend/: Cargo.toml  README.md
backend/migrations/2023-11-17-040416_create_blog_posts/: down.sql  up.sql
backend/src/: api_query.rs  app_error.rs  app_state.rs  db.rs  error.rs  main.rs  responses.rs  routes.rs  schema.rs  session.rs  state.rs
backend/src/models/: blog_post.rs
backend/src/routes/: admin.rs  blog_post.rs  mod.rs  redirect.rs
data/discussions/: urls.json
frontend/: package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/: index.ts
frontend/src/lib/api/: admin.ts  blog_posts.ts  index.ts
frontend/src/routes/: +error.svelte
frontend/src/routes/(site)/: +layout.svelte  +page.svelte  Footer.svelte  (+1 more)
lib/: Cargo.toml
lib/src/: lib.rs  schema.rs
lib/src/models/: blog_posts.rs  mod.rs  users.rs
src/routes/blog/: data.json
(+10 files in other folders)
