[package]
name = "peterhenryd-me-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
dotenvy = "0.15.7"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6.20" }
tower-sessions = "0.5.0"
tower = "0.4.13"
peterhenryd-me-lib = { path = "../lib" }
serde = { version = "1.0.192", features = ["derive"] }