[package]
name = "peterhenryd-me"
version = "0.0.1"
edition = "2021"
authors = ["peterhenryd"]

[dependencies]
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
axum = "0.6.20"
anyhow = "1.0.75"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
time = { version = "0.3.30", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "time"] }
tower = "0.4.13"
tower-sessions = { version = "0.5.0", features = ["postgres-store"] }